--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
         <version>2.5.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.cuc.ctrip</groupId>
-        <artifactId>demo</artifactId>
+    <groupId>com.cuc.dameng</groupId>
+        <artifactId>dameng</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
+    <name>dameng</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>8</java.version>
